<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myapplication.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_page2"
        android:name="com.example.myapplication.ui.page_2.Page2Fragment"
        android:label="@string/menu_page2"
        tools:layout="@layout/fragment_page2" />
    <fragment
        android:id="@+id/nav_page3"
        android:name="com.example.myapplication.ui.page_3.Page3Fragment"
        android:label="@string/menu_page3"
        tools:layout="@layout/fragment_page3" />
    <fragment
        android:id="@+id/nav_page4"
        android:name="com.example.myapplication.ui.page_4.Page4Fragment"
        android:label="@string/menu_page4"
        tools:layout="@layout/fragment_page4" />
    <fragment
        android:id="@+id/nav_page5"
        android:name="com.example.myapplication.ui.page_5.Page5Fragment"
        android:label="@string/menu_page5"
        tools:layout="@layout/fragment_page5" />
</navigation>